# browser-switcher

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: 2026-05-01-browser-switcher-development-summary.md  development-summary.md
docs/superpowers/plans/: 2026-05-01-default-browser-tray-implementation.md
docs/superpowers/specs/: 2026-05-01-default-browser-tray-utility-design.md
icon-designs/ver2/: README.md
scripts/: build-about.mjs  dev-about.mjs
src-about/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: browser.rs  icons.rs  lib.rs  main.rs  registry.rs  settings.rs
tests/: about-html.test.mjs
