[package]
name = "browser-switcher"
version = "0.1.1"
description = "Windows tray utility for opening browser Default Apps settings"
authors = ["Browser Switcher contributors"]
edition = "2021"

[lib]
name = "browser_switcher"
path = "src/lib.rs"

[[bin]]
name = "browser-switcher"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Storage_FileSystem", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
winreg = "0.52"
